# LiteROV

./: CMakeLists.txt  README.md
hardware/LiteROV Controller/: #auto_saved_files#  LiteROV Controller.kicad_sch  LiteROV Controller.net  _autosave-LiteROV Controller.kicad_pcb  _autosave-LiteROV Controller.kicad_sch  ~LiteROV Controller.kicad_sch.lck
inc/: JOYC.h  SERVO.h
other/datasheet/: Datasheet.odt
other/hardware/LiteROV Controller/: LiteROV Controller.kicad_pcb  LiteROV Controller.kicad_prl  LiteROV Controller.kicad_pro  fp-info-cache
other/pre-built/: LiteROV.uf2  Readme.md
src/: JOYC.cpp  LiteROV.cpp  SERVO.cpp
